some changes to base index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>QR Generator</title>
     <meta name="description" content="Generate and style QR codes (URL, text, WiFi, vCard, event) with color, gradients, logos, and export to PNG/SVG.">
   <meta name="theme-color" content="#0a0a0b">
-  <link rel="canonical" href="https://velcrafting.com/labs/qr-generator/">
+  <link rel="canonical" href="https://velcrafting.com/labs/qr-lab/">
   <!-- Optional large preview asset; favicon uses /logo.svg -->
   <!-- <link rel="icon" href="./thumbnail.svg"> -->
   <link rel="stylesheet" href="./src/style.css">
